argocd/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "argocd.kimdragon50.ml"
  #   tls:
  #     httpsRedirect: true
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: PASSTHROUGH
  #   hosts:
  #   - "targocd.dev.lotte-ndp.int"
