argocd/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  gateways:
  - argocd-gateway
  hosts:
  - "argocd.kimdragon50.ml"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
  tls:
  - match:
    - port: 443
      sniHosts:
      - "argocd.kimdragon50.ml"
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
